--- a/style.css
+++ b/style.css
@@ -615,6 +615,9 @@ header {
   height: 100%;
   display: flex;
 }
+.title-color{
+  color: #dce8ff;
+}
 .hero-bg img {
   width: 100%;
   height: 100%;
@@ -718,14 +721,11 @@ header {
 .inspire h2{
   font-size: 36px;
   line-height: 120%;
-  letter-spacing: -0.06em;
   font-weight: 500;
   margin-bottom: 16px;
   color: #fff;
 }
-.inspire h2 span{
-  color: #DCE8FF;
-}
+
 .inspire p{
   font-size: 18px;
   font-weight: 400;
@@ -752,9 +752,7 @@ header {
 .work__button{
   display: none;
 }
-.work h2 span{
- color: #a6afbf;
-}
+
 .work__top{
   display: flex;
   justify-content: space-between;
@@ -855,7 +853,7 @@ header {
   position: relative;
   z-index: 1;
 }
-.work__animate:hover{
+.work__animate:hover .work__animate-image{
   animation-play-state: paused;
 }
 .work__animate:hover .work__animate-image-hover{
@@ -1346,7 +1344,8 @@ header {
 .swiper-pagination-bullet-active {
   background: #dce8ff !important;
   opacity: 1 !important;
-
+  width: 8px !important;
+  height: 8px !important;
 }
 .l-reviews-titles p {
   margin-top: 8px;
@@ -1824,7 +1823,8 @@ header {
     display: flex;
     justify-content: center;
     margin-top: 20px;
-    gap: 4px;
+    align-items:center;
+    gap: 8px;
   }
   .advantages__subtitle{
     font-size: 18px;
@@ -1976,6 +1976,7 @@ header {
   .possibility__text{
     font-size: 16px;
     text-align: center;
+    margin: 0px auto;
   }
   .n-hero-heart--tree {
     display: none;
